# tfg_gierm

./: CMakeLists.txt  README.md  package.xml
action/: DoCloserInspection.action  TaskResult.action
include/mission_planner/: agent_behaviour_manager.hpp  battery_faker.hpp  classes.hpp  gesture_recognition_faker.hpp  high_level_planner.hpp  ist_ugv_faker.hpp
launch/: agent.launch.py  battery_faker.launch.py  fakers.launch.py  planner.launch.py  simulation.launch.py  ual.launch.py  uav.launch.py  world.launch.py
msg/: DoCloserInspectionGoal.msg  GenericTaskParams.msg  PlannerBeacon.msg
src/: agent_behaviour_manager.cpp  battery_faker.cpp  behaviour_tree.xml  classes.cpp  gesture_recognition_faker.cpp  heuristic_planner_simulator.cpp  high_level_planner.cpp  ist_ugv_faker.cpp
