<?xml version="1.0"?>
<package format="3">
  <name>mission_planner</name>
  <version>0.0.1</version>
  <description>Mission planner using behavior trees with AEROSTACK2 integration</description>
  <maintainer email="acalvom@us.es">Alvaro</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>as2_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>as2_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- Optional libraries -->
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
